--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-# bin/
-# .vscode
-# src/__pycache__
-
-# Ignore all
-*
-
-# Unignore file with particular extensions
-!*.cpp
-!*.py
+bin/
+.vscode
+__pycache__
